--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
           </div>
         </div>
         <!--Slider End-->
-        <div class=" flex flex-wrap flex-col md:flex-row items-center justify-center z-10 md:h-1/2 md:w-1/2 md:px-20 bg-white bg-opacity-30">
+        <div class=" flex flex-wrap flex-col md:flex-row items-center justify-center z-10 md:h-1/2 md:w-1/2 md:px-20 md:py-5 bg-white bg-opacity-30">
           <div class="flex flex-col w-full justify-center items-center md:items-start text-center md:text-left md:h-full">
             <h2 class="hidden md:flex mt-4 text-lg md:text-2xl font-bold leading-tight text-black text-left font-montserrat">La opción más duradera que podrás encontrar en el mercado, al mejor precio.</h2>
             <img src="assets/img/main_logo.svg" alt="Bancas para Jardín" class="w-5/6 md:w-3/4 my-3">
